--- a/media.css
+++ b/media.css
@@ -1,6 +1,6 @@
 @media (max-width: 1025px) {
     .wrapper {
-        padding: 4em 1em 0;
+        padding: 3em 1em 0;
     }
 
     .header {
@@ -10,7 +10,7 @@
     .form__input-city {
         width: 40%;
     }
-
+    
     .form__input-country {
         width: 40%;
     }
@@ -20,15 +20,29 @@
     }
 }
 
-@media (max-width: 737px) {
-    .wrapper {
+@media (max-width: 812px) {
+    body {
         height: 100%;
     }
+}
 
+@media (max-width: 768px) and (orientation: landscape){
+    body {
+        height: 100%;
+    }
+}
+
+@media (max-width: 768px) and (orientation: portrait){
+    body {
+        height: 100vh;
+    }
+}
+
+@media (max-width: 737px) {
     .weather__city {
         font-size: 2em;
     }
-
+    
     .weather__country {
         font-size: 1em;
     }
@@ -40,8 +54,20 @@
     }
 }
 
+@media (max-width: 485px) {
+    .weather__qual > div > p {
+        font-size: .9em;
+    }
+}
+
 @media (max-width: 415px) {
-    .wrapper {
+    body {
+        height: 100vh;
+    }
+} 
+
+@media (max-width: 320px) and (orientation: portrait) {
+    body {
         height: 100%;
     }
 } 
